--- a/apiMatchData/match.html
+++ b/apiMatchData/match.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Get all the data!</h1>
   <script src="apiMatchData.js"></script>
-  <script src="../apiKey.js"></script>
+  <script src="../APIKEY/apiKey.js"></script>
   <script src="../BILGEWATER/NA.json"></script>
   <input type="button" onclick="mineData()" value="Start Mining Data">
 </body>
