modifies match.html file

--- a/apiMatchData/match.html
+++ b/apiMatchData/match.html
@@ -9,6 +9,7 @@
   <script src="apiMatchData.js"></script>
   <script src="../APIKEY/apiKey.js"></script>
   <script src="../BILGEWATER/NA.json"></script>
+  <script src="miningServer.js"></script>
   <input type="button" onclick="mineData()" value="Start Mining Data">
 </body>
 </html>
